[package]
name = "flat-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flat-storage-backend = { path = "../backend"}

serde = { version = "1.0", default-features = false, features = ["alloc","derive"] }
